--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 2012",
     "lint": "next lint"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "ofetch": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-use": "^17.6.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
